<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterVisitorActivity">

        <TextView
            android:id="@+id/visitor_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/visitor_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/name_hint"
            android:maxLength="36"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/visitor_name_tv"
            app:layout_constraintStart_toEndOf="@+id/visitor_name_tv"
            app:layout_constraintTop_toTopOf="@+id/visitor_name_tv" />

        <TextView
            android:id="@+id/phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visitor_name_tv" />

        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/phone_number_hint"
            android:singleLine="true"
            android:maxLength="12"
            app:layout_constraintBottom_toBottomOf="@+id/phone_number_tv"
            app:layout_constraintStart_toEndOf="@+id/phone_number_tv"
            app:layout_constraintTop_toTopOf="@+id/phone_number_tv" />

        <TextView
            android:id="@+id/visiting_who_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/visiting_who"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_tv" />

        <EditText
            android:id="@+id/visiting_who_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/name_hint"
            android:maxLength="20"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/visiting_who_tv"
            app:layout_constraintStart_toEndOf="@+id/visiting_who_tv"
            app:layout_constraintTop_toTopOf="@+id/visiting_who_tv" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="@dimen/submit_btn"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="Submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>